Revision history for Date-Holidays-Adapter-USA

{{$NEXT}}

0.0109_1 2024-09-23 14:52:58
    - Deprecate this module.

0.0108 2024-06-07 19:33:35
    - Keep in-sync with Date::Holidays::USA.

0.0107 2024-06-06 17:39:39
    - Keep in-sync with the prerequisite Date::Holidays::USA module.

0.0106 2024-05-23 18:16:14
    - Re-add mistakenly removed Adapter dep. Oops.

0.0105 2024-05-23 18:13:26
    - No. Specify the dependency version.

0.0104 2024-05-23 18:08:37
    - Appease the tester gods...

0.0103 2024-05-21 18:48:29
    - Fix test.

0.0102 2024-05-09 15:05:29
    - Add the missing Date::Holidays::USA to the dependencies. Derp!

0.0101 2024-03-20 20:35:19
    - Remove the accidental circular dependency from the dist.ini file.

0.0100 2024-03-19 13:38:10
    - Mint with Dist::Zilla.
    - Modify from Date::Holidays::Adapter::*.