@@ -1,4 +1,4 @@
-name    = Date-Holidays-Adapter-USA
+name    = Date-Holidays-Adapter-USExtended
 author  = Gene Boggs <gene@cpan.org>
 license = Artistic_2_0
 copyright_holder = Gene Boggs
