@@ -1,9 +1,10 @@
 Revision history for Date-Holidays-Adapter-USA
 
 {{$NEXT}}
+    - Rename this module to Date-Holidays-Adapter-USExtended.
 
 0.0109_1 2024-09-23 14:52:58
-    - Deprecate this module.
+    - Deprecate the Date::Holidays::Adapter::USA module.
 
 0.0108 2024-06-07 19:33:35
     - Keep in-sync with Date::Holidays::USA.
